[gd_scene load_steps=3 format=3 uid="uid://uy3nlkookvtr"]

[ext_resource type="Script" path="res://scripts/options_menu.gd" id="1_pr4bh"]

[sub_resource type="LabelSettings" id="LabelSettings_q4nvn"]
font_size = 60

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pr4bh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_q4nvn")
horizontal_alignment = 1

[node name="OptionButton" type="OptionButton" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="CheckBox" type="CheckBox" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Fullscreen"

[node name="BackToMenu" type="Button" parent="Panel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Back to Main Menu"

[connection signal="item_selected" from="Panel/HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="toggled" from="Panel/HBoxContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
